Added Subject CRUD. Fixed Course CRUD. Integrated Events/Announcement in admin dashboard.

--- a/assets/css/adminDashboard.css
+++ b/assets/css/adminDashboard.css
@@ -16,6 +16,12 @@ body{
     border-radius: 25px 25px 0 0 ;
 }
 
+.active dl{
+  color:black !important;
+  border: none !important;
+
+}
+
 /* calendar css */
 .calendar{
   background:rgb(143, 0, 0);
