--- a/assets/css/admission.css
+++ b/assets/css/admission.css
@@ -1,3 +1,66 @@
+/* add exam schedule */
+
+.form-select {
+    font-size: 0.85rem;
+}
+
+.form-control:focus,
+.form-select:focus {
+    box-shadow: none;
+    border-color: #800000;
+}
+
+.form-select::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    font-size: 0.8rem;
+}
+
+.form-select:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    font-size: 0.8rem;
+}
+
+
+/* Add buttons exam */
+
+button#examSave,
+button#examEditSave {
+    background-color: #800000;
+    border-color: transparent;
+    color: white;
+    text-decoration: none;
+    margin-right: 8px;
+    font-size: 0.8rem;
+}
+
+button#examCancel,
+button#examEditCancel {
+    background-color: #aaaaaa;
+    border-color: transparent;
+    color: black;
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+
+button#examSave:hover,
+button#examEditSave:hover {
+    background-color: white;
+    border-color: #800000;
+    color: #800000;
+    font-size: 0.8rem;
+}
+
+button#examCancel:hover,
+button#examEditCancel:hover {
+    background-color: white;
+    border-color: #800000;
+    color: #800000;
+    font-size: 0.8rem;
+}
+
+
+/* Switch tabs */
+
 #enrollmentTabContent .searchBG,
 #applicantTabContent .searchBG {
     color: white;
@@ -6,9 +69,8 @@
     font-size: 11px;
 }
 
-select:invalid {
+.select {
     color: gray;
-    font-style: oblique;
     font-size: 0.8rem;
     padding: .1rem 0;
 }
@@ -81,7 +143,8 @@ div#viewEnrollmenttButton.tab-pane.active::before {
 }
 
 #enrollmentTabContent #table-bodyEnroll td,
-#applicantTabContent #table-bodyAppl td {
+#applicantTabContent #table-bodyAppl td,
+#scheduleTabContent #table-bodySched td {
     font-weight: 200;
     max-width: 200px;
     overflow: hidden;
@@ -90,7 +153,8 @@ div#viewEnrollmenttButton.tab-pane.active::before {
 }
 
 #enrollmentTabContent #table-bodyEnroll tr,
-#applicantTabContent #table-bodyAppl tr {
+#applicantTabContent #table-bodyAppl tr,
+#scheduleTabContent #table-bodySched tr {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -341,4 +405,38 @@ span.confirmTitle {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+#table-bodySched tbody .action-buttons {
+    list-style-type: none;
+    display: inline-block;
+}
+
+#table-bodySched tbody .action-buttons button {
+    color: white;
+    background-color: maroon;
+    font-size: 0.58rem;
+    padding: 2.8px 5px;
+    opacity: 0.9;
+}
+
+#table-bodySched tbody .action-buttons button#deactSched {
+    color: white;
+    background-color: maroon;
+    font-size: 0.53rem;
+    opacity: 0.9;
+    padding: 3.3px 7px;
+    border-radius: 3px;
+    cursor: pointer;
+    width: 57px;
+    margin-left: 1px;
+}
+
+#table-bodySched tbody .action-buttons button:hover,
+#table-bodySched tbody .action-buttons button#deactSched:hover {
+    opacity: 1;
+}
+
+#table-body tbody .action-buttons li button:focus {
+    box-shadow: none;
 }
