Added Faculty Profile Tab

--- a/assets/css/facultyProfile.css
+++ b/assets/css/facultyProfile.css
@@ -5,9 +5,20 @@ body{
 
 /* Title Page */
 
-.SectionTab h3{
+.myProfile h3{
     font-size: 1.5rem;
-    font-weight: 800;
+    font-weight: 1000;
+    margin-bottom: 0;
+}
+
+/* My Profile Details */
+
+#myProfileDetails td{
+    color: black;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding: 0px 10px 15px 0px;
 }
 
 /* Table Responsiveness */
@@ -25,7 +36,7 @@ body{
 }
 .table-title h2{
     font-size: inherit;
-    margin: 12px 12px 12px 20px;
+    margin: 12px 12px 12px 22px;
     text-align: start;
 }
 #table-body thead{
@@ -50,7 +61,6 @@ body{
 /* Form Responsiveness */
 
 label.form-label{
-    margin-top: 8px;
     margin-bottom: 0;
 }
 .form-label{
@@ -80,39 +90,40 @@ input[type=text], input[type=date], input[type=time], textarea{
     color: black;
     font-size: 0.8rem;
 }
+.form-control:disabled, .form-control[readonly]{
+    background-color: white;
+    opacity: 1;
+}
 
-/* Modal */
+/* ... */
 
-.modal-header{
+.mb-1{
+    margin-bottom: 0!important;
+}
+
+/* Edit, Save, Cancel Button */
+
+#edit{
     background-color: #800000;
+    border-color: transparent;
     color: white;
+    text-decoration: none;
+    font-size: 0.8rem;
+    margin: 0px 8px;
 }
-
-/* Add Section Buttons */
-
-#addSectionButton{
-    align-items: center;
-    text-align: center;
-    margin-top: 25px;
+#edit:hover{
+    background-color: white;
+    border-color: #800000;
+    color: #800000;
+    font-size: 0.8rem;
 }
-#add, #edit, #delete{
-    color: white;
-    background-color: #800000;
-    
-}
-#add i, #edit i, #delete i{
-    font-size: 15px;
-}
-
-/* Save and Cancel Button */
-
 #save{
     background-color: #800000;
     border-color: transparent;
     color: white;
     text-decoration: none;
     font-size: 0.8rem;
-    margin-right: 8px;
+    margin: 0px 8px;
 }
 #cancel{
     background-color: #aaaaaa;
@@ -120,6 +131,7 @@ input[type=text], input[type=date], input[type=time], textarea{
     color: black;
     text-decoration: none;
     font-size: 0.8rem;
+    margin: 0px;
 }
 #save:hover{
     background-color: white;
@@ -137,17 +149,9 @@ input[type=text], input[type=date], input[type=time], textarea{
     box-shadow: none;
 }
 
-/* Filter */
+/* Modal */
 
-#filterAndSearch{
-    text-align: right;
-}
-select:invalid{
-    color: gray;
-}
-option{
-    color: black;
-}
-select:active{
-    box-shadow: none;
+.modal-header{
+    background-color: #800000;
+    color: white;
 }
