--- a/assets/css/admission.css
+++ b/assets/css/admission.css
@@ -150,6 +150,7 @@ div#viewEnrollmenttButton.tab-pane.active::before {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    line-height: 26px;
 }
 
 #enrollmentTabContent #table-bodyEnroll tr,
@@ -164,11 +165,11 @@ div#viewEnrollmenttButton.tab-pane.active::before {
 .addBtn,
 .confirmBtn,
 .confirmEnrollment {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     background: #DB1A00;
     border: none;
     opacity: 0.9;
-    padding: 2px 7px;
+    padding: 1px 8px;
 }
 
 .addBtn:hover,
@@ -251,6 +252,129 @@ span.confirmTitle {
 }
 
 
+/* requirements modal */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    max-width: 650px;
+    max-height: 700px;
+    margin-right: 17rem;
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    -moz-animation-name: zoom;
+    -moz-animation-duration: 0.6s;
+    -o-animation-name: zoom;
+    -o-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+
+/* The Close Button */
+
+.closeRequirement {
+    color: white;
+    position: absolute;
+    top: 45px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.closeRequirement:hover,
+.closeRequirement:focus {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.mySlides {
+    display: none;
+}
+
+.cursor {
+    cursor: pointer;
+}
+
+
+/* Next & previous buttons */
+
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+.caption-container {
+    text-align: center;
+    background-color: black;
+    padding: 2px 16px;
+    color: white;
+}
+
+.demo {
+    opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+    opacity: 1;
+}
+
+img.hover-shadow {
+    transition: 0.3s;
+}
+
+.hover-shadow:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
 /* receipt attachment modal */
 
 #receiptAttachment {
@@ -271,13 +395,9 @@ span.confirmTitle {
 
 .modalReceipt {
     display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
     z-index: 1;
-    /* Sit on top */
     padding-top: 100px;
-    /* Location of the box */
     left: 0;
     top: 10;
     padding-left: 15rem;
@@ -288,7 +408,6 @@ span.confirmTitle {
     background-color: rgb(0, 0, 0);
     /* Fallback color */
     background-color: rgba(0, 0, 0, 0.9);
-    /* Black w/ opacity */
 }
 
 
