--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,8 +1,10 @@
-.wrapper-button a{
+.wrapper-button a {
     text-decoration: none;
 }
 
+
 /* Add styles to the form container */
+
 .wrapper-button {
     position: absolute;
     padding: 16px;
@@ -11,18 +13,20 @@
     right: 0;
     transform: translate(-50%, -50%);
 }
+
 .btn:hover {
     opacity: 1;
 }
 
-h1{
+h1 {
     width: auto;
     text-align: center;
     font-weight: 700;
     letter-spacing: 2px;
     font-size: 2rem;
 }
-.login-btn{
+
+.login-btn {
     /* button box */
     display: block;
     width: 300px;
@@ -39,21 +43,20 @@ h1{
     padding: 20px;
     overflow: hidden;
     position: relative;
-
     /* button label/title */
     font-size: 1.3rem;
     font-weight: 500;
     color: white;
     text-transform: uppercase;
-    text-decoration: none;  
-    
+    text-decoration: none;
     transition-duration: 0.2s;
-    webkit-transition-duration: 0.1s; /* Safari */
-    -moz-transition-duration:  0.1s;
+    webkit-transition-duration: 0.1s;
+    /* Safari */
+    -moz-transition-duration: 0.1s;
     -ms-transition-duration: 0.1s;
 }
 
-.login-btn:hover{
+.login-btn:hover {
     background-color: #B20000;
     opacity: 10px;
     transform: scale(1.03);
@@ -71,40 +74,42 @@ h1{
     margin-top: -120%;
     opacity: 0;
     transition: all 0.5s
-  }
-  
+}
+
 .login-btn:active:after {
     padding: 0;
     margin: 0;
     opacity: 1;
     transition: 0s
-  }
-  
-  .login-btn:focus { outline:0; }
-  
-
-@media screen and (min-width: 1445px){
-   .login-btn{
-        width: 350px;
-        height: 100px;
-   }
 }
 
-@media screen and (max-width: 1024px){
-    .wrapper-button { 
+.login-btn:focus {
+    outline: 0;
+    box-shadow: none;
+}
+
+@media screen and (min-width: 1445px) {
+    .login-btn {
+        width: 350px;
+        height: 100px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .wrapper-button {
         left: 50%;
         top: 55%;
         right: 0;
     }
 }
 
-@media screen and (max-width: 570px){
-    .navbar-light .navbar-brand{
+@media screen and (max-width: 570px) {
+    .navbar-light .navbar-brand {
         font-size: .6rem;
         padding-left: 0;
         color: white;
     }
-    .login-btn{
+    .login-btn {
         width: 250px;
         height: 70px;
         font-size: 1.2rem;
@@ -115,22 +120,22 @@ h1{
     }
 }
 
-@media screen and (max-width: 375px){
-    .login-btn{
+@media screen and (max-width: 375px) {
+    .login-btn {
         width: 220px;
         height: 60px;
         font-size: 1rem;
     }
-    h1{
+    h1 {
         font-size: 1.7rem;
     }
 }
 
-@media screen and (max-width: 320px){
-    .navbar-light .navbar-brand{
+@media screen and (max-width: 320px) {
+    .navbar-light .navbar-brand {
         font-size: 0.55rem;
     }
-    .login-btn{
+    .login-btn {
         margin: 40px;
     }
 }
