--- a/assets/css/admission.css
+++ b/assets/css/admission.css
@@ -254,27 +254,25 @@ span.confirmTitle {
 
 /* requirements modal */
 
-.modal {
+.reqModal {
     display: none;
     position: fixed;
-    z-index: 1;
     padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.9);
 }
 
-.modal-content {
+.modal-Requirementscontent {
     position: relative;
     background-color: #fefefe;
-    margin: auto;
+    margin: 0 auto;
     padding: 0;
     max-width: 650px;
     max-height: 700px;
-    margin-right: 17rem;
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
     -moz-animation-name: zoom;
@@ -292,7 +290,7 @@ span.confirmTitle {
     color: white;
     position: absolute;
     top: 45px;
-    right: 25px;
+    right: 35px;
     font-size: 35px;
     font-weight: bold;
 }
@@ -396,14 +394,11 @@ img.hover-shadow {
 .modalReceipt {
     display: none;
     position: fixed;
-    z-index: 1;
     padding-top: 100px;
     left: 0;
     top: 10;
-    padding-left: 15rem;
     width: 100%;
     height: 100%;
-    overflow: auto;
     /* Enable scroll if needed */
     background-color: rgb(0, 0, 0);
     /* Fallback color */
