--- a/assets/css/admission.css
+++ b/assets/css/admission.css
@@ -1,7 +1,8 @@
 /* add exam schedule */
 
-.form-select {
-    font-size: 0.85rem;
+.form-select,
+.form-control {
+    font-size: 0.95rem;
 }
 
 .form-control:focus,
@@ -18,6 +19,61 @@
 .form-select:-ms-input-placeholder {
     /* Internet Explorer 10-11 */
     font-size: 0.8rem;
+}
+
+.form-select::-ms-input-placeholder {
+    font-size: 0.8rem;
+}
+
+.accordion-item {
+    border-radius: 30px;
+}
+
+.accordion-button {
+    background-color: #302323;
+    color: white;
+    font-size: 0.9rem;
+    padding: 15px 1.3rem;
+}
+
+.accordion-item:first-of-type .accordion-button {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+.accordion-item:last-of-type {
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+
+.accordion-item:last-of-type .accordion-button.collapsed {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background: maroon;
+}
+
+.accordion-item:last-of-type {
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+
+.accordion-button::after {
+    filter: brightness(0%) invert(100%);
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: #800000;
+    color: white;
+}
+
+.accordion-button:not(.collapsed)::after {
+    filter: brightness(0%) invert(100%);
+}
+
+.accordion-button:focus {
+    box-shadow: none;
 }
 
 
@@ -251,6 +307,10 @@ span.confirmTitle {
     font-size: 1rem;
 }
 
+.tabDetails h6.step {
+    color: maroon;
+}
+
 
 /* requirements modal */
 
@@ -266,13 +326,18 @@ span.confirmTitle {
     background-color: rgba(0, 0, 0, 0.9);
 }
 
+hr {
+    opacity: 0.7;
+}
+
 .modal-Requirementscontent {
     position: relative;
-    background-color: #fefefe;
     margin: 0 auto;
     padding: 0;
-    max-width: 650px;
+    max-width: 700px;
     max-height: 700px;
+    padding-left: 1rem;
+    padding-right: 1rem;
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
     -moz-animation-name: zoom;
@@ -289,8 +354,8 @@ span.confirmTitle {
 .closeRequirement {
     color: white;
     position: absolute;
-    top: 45px;
-    right: 35px;
+    top: 15px;
+    right: 25px;
     font-size: 35px;
     font-weight: bold;
 }
@@ -487,16 +552,12 @@ img.hover-shadow {
         width: 100%;
     }
     .modalReceipt {
-        padding-left: 16rem;
+        padding-left: 2rem;
         padding-right: 2rem;
     }
 }
 
 @media only screen and (max-width: 680px) {
-    .modalReceipt {
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
     span.confirmTitle {
         font-size: 1.2rem;
     }
@@ -532,6 +593,11 @@ img.hover-shadow {
     font-size: 0.58rem;
     padding: 2.8px 5px;
     opacity: 0.9;
+}
+
+#table-bodySched tbody .action-buttons button#edit:focus {
+    outline: none;
+    box-shadow: none;
 }
 
 #table-bodySched tbody .action-buttons button#deactSched {
