--- a/assets/css/announcement.css
+++ b/assets/css/announcement.css
@@ -1,47 +1,52 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
     font-size: 0.9rem;
 }
 
+
 /* Announcement Tab */
 
-.AnnouncenentTab h3{
+.AnnouncenentTab h3 {
     font-size: 1.5rem;
     font-weight: 800
 }
 
-#back-button .btn{
+#back-button .btn {
     background-color: #800000;
     color: white;
     border-color: transparent;
     margin-bottom: 20px;
 }
 
-.btn:focus{
+.btn:focus {
     box-shadow: none;
 }
 
-#back-button a:hover{
+#back-button a:hover {
     background-color: white;
     border-color: #800000;
     color: #800000;
 }
 
+
 /*Create Announcement*/
 
-#create{
+#create {
     margin-bottom: 20px;
 }
-.accordion-item{
+
+.accordion-item {
     border-radius: 30px;
 }
-.accordion-button{
+
+.accordion-button {
     background-color: #302323;
     color: white;
     font-size: 0.9rem;
     padding: 15px 1.3rem;
 }
-.accordion-item:first-of-type .accordion-button{
+
+.accordion-item:first-of-type .accordion-button {
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
 }
@@ -50,6 +55,7 @@ body{
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
 }
+
 .accordion-item:last-of-type .accordion-button.collapsed {
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
@@ -57,34 +63,35 @@ body{
     border-bottom-right-radius: 25px;
     background: maroon;
 }
+
 .accordion-item:last-of-type {
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
 }
 
-.accordion-button::after{
+.accordion-button::after {
     filter: brightness(0%) invert(100%);
 }
 
-.accordion-button:not(.collapsed){
+.accordion-button:not(.collapsed) {
     background-color: #800000;
-    color:white;
+    color: white;
 }
 
-.accordion-button:not(.collapsed)::after{
+.accordion-button:not(.collapsed)::after {
     filter: brightness(0%) invert(100%);
 }
 
-.accordion-button:focus{
+.accordion-button:focus {
     box-shadow: none;
 }
 
-#addAnnouncementForm .form-control:focus{
+#addAnnouncementForm .form-control:focus {
     box-shadow: none;
     border-color: #800000;
 }
 
-#save{
+#save {
     background-color: #800000;
     border-color: transparent;
     color: white;
@@ -93,7 +100,7 @@ body{
     font-size: 0.8rem;
 }
 
-#cancel{
+#cancel {
     background-color: #aaaaaa;
     border-color: transparent;
     color: black;
@@ -101,105 +108,119 @@ body{
     font-size: 0.8rem;
 }
 
-.container .addAnnouncementButton button:focus{
+.container .addAnnouncementButton button:focus {
     box-shadow: none;
 }
 
-.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+.form-control::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
     font-size: 0.8rem;
 }
 
-.form-control:-ms-input-placeholder { /* Internet Explorer 10-11 */
+.form-control:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
     font-size: 0.8rem;
 }
 
-.form-control::-ms-input-placeholder { /* Microsoft Edge */
+.form-control::-ms-input-placeholder {
+    /* Microsoft Edge */
     font-size: 0.8rem;
 }
 
-input[type=text], input[type=date],input[type=time], textarea{
+input[type=text],
+input[type=date],
+input[type=time],
+textarea {
     color: black;
     font-size: 0.8rem;
 }
-#save:hover{
+
+#save:hover {
     background-color: white;
     border-color: #800000;
     color: #800000;
     font-size: 0.8rem;
 }
 
-#cancel:hover{
+#cancel:hover {
     background-color: white;
     border-color: #800000;
     color: #800000;
     font-size: 0.8rem;
 }
+
 
 /*Announcement Table*/
-.table-wrapper{
+
+.table-wrapper {
     background: white;
     border-radius: 25px;
     border: 0.1px solid rgb(221, 220, 220);
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.table-title{
+
+.table-title {
     background-color: #800000;
     color: white;
     text-align: center;
-    border-radius: 25px 25px 0 0 ;
+    border-radius: 25px 25px 0 0;
 }
 
-.table-title h2{
+.table-title h2 {
     font-size: inherit;
     margin: 15px;
 }
 
-#table-body thead{
+#table-body thead {
     text-align: center;
 }
 
-#table-body tbody{
+#table-body tbody {
     text-align: center;
-
 }
+
+
 /* Action Button */
 
-#table-body tbody .action-buttons li{
+#table-body tbody .action-buttons li {
     list-style-type: none;
     display: inline-block;
 }
 
-#table-body tbody .action-buttons li button{
+#table-body tbody .action-buttons li button {
     color: white;
-    background-color:maroon;
+    background-color: maroon;
     font-size: 0.55rem;
     padding: 2.8px 5px;
     opacity: 0.93;
     margin-top: 2.4px;
 }
-#table-body tbody .action-buttons li #status{ 
+
+#table-body tbody .action-buttons li #status {
     color: white;
-    background-color:maroon;
+    background-color: maroon;
     font-size: 0.53rem;
     opacity: 0.93;
-    padding: 3.1px 7px;
+    padding: 3px 6.8px;
     border-radius: 3px;
     cursor: pointer;
     width: 55px;
     margin-left: 1px;
 }
-#table-body tbody .action-buttons li button:hover, #table-body tbody .action-buttons li #status:hover{
+
+#table-body tbody .action-buttons li button:hover,
+#table-body tbody .action-buttons li #status:hover {
     opacity: 1;
 }
 
-
-#table-body tbody .action-buttons li button:focus{
+#table-body tbody .action-buttons li button:focus {
     box-shadow: none;
 }
 
+
 /* Edit Announcement */
 
-.modal-header{
+.modal-header {
     background-color: #800000;
     color: white;
 }
