--- a/assets/css/studentMyProfile.css
+++ b/assets/css/studentMyProfile.css
@@ -1,3 +1,37 @@
+#file {
+    display: none;
+}
+
+.profile-pic-div {
+    height: 140px;
+    width: 140px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    border: 1px solid grey;
+}
+
+#photo {
+    height: 100%;
+    width: 100%;
+}
+
+#uploadBtn {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    background: rgba(0, 0, 0, 0.7);
+    color: wheat;
+    line-height: 30px;
+    font-family: sans-serif;
+    font-size: 12px;
+    cursor: pointer;
+    display: none;
+}
+
 .table-body tr {
     overflow: hidden;
     text-overflow: ellipsis;
