--- a/assets/css/studentMyProfile.css
+++ b/assets/css/studentMyProfile.css
@@ -11,6 +11,13 @@
     border: 1px solid grey;
 }
 
+@media only screen and (max-width: 768px) {
+    .profile-pic-div {
+        height: 140px;
+        width: 200px;
+    }
+}
+
 #photo {
     height: 100%;
     width: 100%;
@@ -39,7 +46,7 @@
 }
 
 .table-body td {
-    max-width: 200px;
+    max-width: 350px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
