--- a/assets/css/adminDashboard.css
+++ b/assets/css/adminDashboard.css
@@ -17,7 +17,8 @@ body {
 }
 
 .billboard .billboardTitle {
-    background: linear-gradient(to right, #ffd89b 0%, #19547b 100%);
+    /* background: linear-gradient(to right, #ffd89b 0%, #19547b 100%); */
+    background: maroon;
     border-radius: 25px 25px 0 0;
 }
 
