--- a/assets/css/studentDashboard.css
+++ b/assets/css/studentDashboard.css
@@ -2,12 +2,64 @@
     border-bottom: 2px solid black;
 }
 
+.billboard button.viewAnnounceDeets{
+    background: #F2BD53;
+    border: 1px solid #dfa32b;
+    border-radius: 0.3rem;
+    color: black;
+    opacity: 0.8;
+}
+.billboard button.viewAnnounceDeets:hover{
+    opacity: 1;
+}
+.billboard button.viewAnnounceDeets:focus{
+    outline: none;
+    box-shadow: none;
+}
+h5.details{
+    background: rgb(242, 188, 196);
+    border: 1px solid rgb(221, 147, 158);
+    border-radius: 0.3rem;
+    font-size: 0.9rem;
+    padding: 5px 10px;
+}
+/* View announcement modal */
+.modal-body{
+    text-align: left;
+    font-size: 1rem;
+}
+
+.modal button.btn-secondary{
+    background-color: lightgray;
+    color: black;
+
+}
+.modal button.btn-secondary:hover{
+    background-color: transparent;
+    border:  1px solid gray;
+}
+
+
+/* schedule */
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link {
     color: black;
-    padding: 10px 43px;
+    /* padding: 10px auto; */
     font-weight: 600;
     letter-spacing: 1px;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    text-align: center;
+    text-transform: uppercase;
+    color: #3d3d3d;
+    font-weight: 500;
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+    border-radius: 2px 2px 0 0;
+    cursor: pointer;
+    width: 100%;
 }
 
 .nav-tabs .nav-item.show .nav-link,
@@ -32,8 +84,7 @@
     position: relative;
     z-index: 1;
     border: 2px solid #c2c2c2;
-    /* background: linear-gradient(to right, #ddd6f3 0%, #faaca8 100%); */
-    background: transparent;
+    background-color: white;
     overflow: hidden;
     border-radius: 6px;
     color: black;
@@ -44,15 +95,16 @@
     background-color: transparent;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    height: 320px;
-    border: 0.1px solid rgb(221, 220, 220);
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    /* border: 0.1px solid rgb(221, 220, 220);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25); */
 }
 
 .box-wrapper:hover .box-content {
     top: 0;
     /*bring the content back*/
 }
+
+/* days nav schedule */
 
 .viewSched .timetable-item {
     border: 1px solid #d8e3eb;
@@ -61,4 +113,33 @@
     position: relative;
     display: block;
     overflow: none;
+}
+.viewSched .timetable-item-subtitle {
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    color: rgb(90, 89, 89);
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+.viewSched .timetable-item-subj {
+    letter-spacing: 1px;
+    background: #f4f4f4;
+    width: fit-content;
+    /* padding: 0.7rem; */
+    border-radius: 0.5rem;
+    border: 1px solid #d8e3eb;
+    font-size: 0.95rem;
+
+
+}
+.viewSched .timetable-item-prof {
+    color: brown;
+    letter-spacing: 1px;
+    background: rgb(255, 178, 147);
+    width: fit-content;
+    height: fit-content;
+    /* padding: 0.7rem 1.5rem; */
+    border-radius: 0.5rem;
+    border: 1px solid rgb(237, 119, 73);
+    font-size: 0.95rem;
 }
