--- a/assets/css/sideBarMAIN.css
+++ b/assets/css/sideBarMAIN.css
@@ -95,6 +95,8 @@ header .email {
 
 .dropdown-menu {
     min-width: 7.3rem;
+    background: lightgray; 
+    max-width:50px;
 }
 
 element.style {
@@ -178,10 +180,6 @@ a:hover {
     left: 0
 }
 
-.body-pd {
-    padding-left: calc(var(--nav-width) + 1.2rem)
-}
-
 .active {
     color: maroon;
     font-weight: 900;
@@ -220,7 +218,6 @@ a:hover {
     .l-navbar {
         left: 0;
         padding: 1rem 0.8rem 0 0;
-
     }
     .side {
         width: calc(var(--nav-width) + 156px);
