--- a/assets/css/applicant.css
+++ b/assets/css/applicant.css
@@ -20,6 +20,14 @@ body {
         height: 0;
     }
 }
+
+@media (max-width: 410px) {
+    ul{
+        letter-spacing: 0;
+        font-size: 0.7rem;
+    }
+}
+
 span.spare{
     display: none;
 }
@@ -27,12 +35,12 @@ span.spare{
 #personalInfo span.spare1, #educationalattainment span.spare1, #requirement span.spare1 {
     display: none;
 }
-@media (max-width: 834px) and (min-width:806px){
+@media (max-width: 1075px) and (min-width:1038px){
     #personalInfo span.spare1, #educationalattainment span.spare1, #requirement span.spare{
         display: block;
     }
 }
-@media (max-width: 834px){
+@media (max-width: 1076px){
     #personalInfo span.spare, #educationalattainment span.spare, #requirement span.spare{
         display: block;
     }
@@ -133,13 +141,14 @@ ul {
     align-items: center;
     justify-content: space-between;
     letter-spacing: 1px;
+    font-size: 0.8rem;
     counter-reset: step;
 }
 
 li {
     display: inline-block;
     position: relative;
-    width: 32.22%;
+    width: 24%;
     text-align: center;
     margin-bottom: 15px 0;
 }
@@ -189,7 +198,7 @@ li.active:before {
     color: #F2BD53;
 }
 
-.form-control:focus {
+.form-control:focus, .form-select:focus{
     box-shadow: none;
     border-color: #800000;
 }
@@ -247,6 +256,10 @@ label {
     background: #faba39;
 }
 
+.stepButtons .btn-warning:focus {
+    outline: none;
+    box-shadow: none;
+}
 
 /* common styles */
 #educationalattainment, #requirement{
