--- a/assets/css/facultyProfile.css
+++ b/assets/css/facultyProfile.css
@@ -42,6 +42,7 @@ body{
     text-overflow: ellipsis;
     white-space: nowrap;
     padding: 0px 10px 15px 0px;
+    font-size: 1rem;
 }
 
 /* Table Responsiveness */
